data/derived/comb/progs/unify/prog6661.ml.out
Characters 298-313:
  |Thresh(a,b,a_less,b_less)->let x1=eval(a,x,y) in let x2=eval(b,x,y)  in  if(x1<x2) then eval a_less,x,y else eval b_less,x,y;;
                                                                                           ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type float
